添加10-8文件上传模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,18 @@ spring.datasource.tomcat.max-wait=10000
 #数据库连接池初始化连接数
 spring.datasource.tomcat.initial-size=5
 
-#####mybatis########
+###mybatis########
 #开启驼峰命名
 mybatis.configuration.map-underscore-to-camel-case=true
+
+###文件上传########
+# 指定默认上传的文件夹
+spring.servlet.multipart.location=d:/Files
+# 限制单个文件最大大小，这里设置为5M
+spring.servlet.multipart.max-file-size=5242880
+# 限制所有文件最大大小,这里设置为20M
+spring.servlet.multipart.max-request-size=20MB
+
 
 #设置日志级别
 #logging.level.root=debug
